[package]
name = "flex_cli"
author= "Kåre von Geijer"
version = "0.1.0"
edition = "2021"
about = "A small app to keep track of your working hours and flex time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
