[package]
name = "flex_cli"
author = "Kåre von Geijer"
version = "0.1.0"
edition = "2021"
about = "A small app to keep track of your working hours and flex time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
