[package]
name = "flex-cli"
authors = ["Kåre von Geijer <kare.kvg@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small app to keep track of your working hours and flex time"
readme = "README.md"
repository = "https://github.com/ka7801vo/FlexTracker"
keywords = ["cli", "time tracking", "flex time"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
dirs= "4"
